CustomObjects/objects/SBQQ__RecordJob__c.object
<CustomObject>
    <description>Maps records to the Apex Jobs it initiates</description>
    <fields>
        <fullName>SBQQ__IsRead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the user has been alerted of the record job&apos;s finished status</description>
        <inlineHelpText>If checked the user has been alerted of the record job&apos;s finished status.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__JobId__c</fullName>
        <description>The Apex Job Id</description>
        <label>Job Id</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RecordId__c</fullName>
        <description>The unique key for this record, comprised of the parent record Id and the type of job</description>
        <label>Record Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Record Job</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__RecordId__c</columns>
        <columns>SBQQ__JobId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JOB{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>